skills/sohrab/alaa-haproxy/examples/kubernetes/haproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  labels:
    app: haproxy
  annotations: {}
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: haproxy
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-metrics
  labels:
    app: haproxy
    expose-metrics: "true"
spec:
  type: ClusterIP
  selector:
    app: haproxy
  ports:
  - name: metrics
    port: 8405
    targetPort: 8405
